resolve warning buid qodana